# CoLearn

./: .gitignore  COLEARN.md  README.md  pyproject.toml  pytest.ini  sitecustomize.py
.colearn/: nanobot-v0.2-slim.config.json
.colearn/webui/: websocket_3a1cb113-1c35-4b9d-b072-6838b259183b.jsonl  websocket_c42ce1b4-d06c-4ef2-9d9d-947363a06812.jsonl  websocket_cee70d35-3364-4fed-9bfc-f0b2013d86ed.jsonl
CoLearn-docs/: README.md
CoLearn-docs/02-Architecture/: CoLearn 产品架构图.drawio  CoLearn-LearningState-协议.md  CoLearn-个人开发维护手册.md  CoLearn-后端代码补全计划-已完成.md  CoLearn-后端代码补全计划.md  CoLearn-学习循环实施手册-已完成.md  (+3 more)
colearn/: __init__.py  cli.py  devtools.py  errors.py  logging_config.py  logging_context.py  mcp_server.py  paths.py  server.py
colearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: start-colearn-v2-gateway.ps1  start-colearn.ps1
tests/: conftest.py  live_smoke.py  live_smoke_rag.py  test_api_app.py  test_app_lifespan.py  test_board_deriver.py  test_cancel_turn.py  test_compression.py  test_consolidation_cycle.py  test_defaults_env_override.py  test_event_kinds.py  test_learning_orchestrator.py  test_lightrag_adapter.py  test_local_backend.py  test_mcp_server.py  test_memory_eviction.py  test_persistence.py  test_pipeline_integration.py  test_retrieval_cache.py  test_retrieval_hooks_strategy.py  test_retrieval_service.py  test_runtime_executor.py  test_runtime_tooling.py  test_schemas.py  test_signal_extractor.py  test_turn_cache.py  test_turn_timeout.py
web/: package.json  tsconfig.node-tests.json
webui/: README.md  package-lock.json  vite.config.ts
(+242 files in other folders)
