[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colearn"
version = "0.1.0"
description = "CoLearn learning workspace runtime (webui + runtime_v2 + slim config)."
requires-python = ">=3.11"
dependencies = [
    "anyio>=4",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
nanobot = [
    "loguru>=0.7",
    "jinja2>=3",
    "filelock>=3",
    "rich>=13",
    "typer>=0.9",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
include = ["colearn*"]
exclude = ["third_party*", "tests*", "webui*", "skills*", "scripts*", "CoLearn-docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
